<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--为什么要采取app命名空间，因为item在其内？-->
    <item
        android:id="@id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@id/action_notification"
        android:icon="@mipmap/ic_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="101"
        android:title="@string/menu_about_us"
        app:showAsAction="never">

    </item>

</menu>